# deterministic-weekly-trading

./: .gitignore  DESIGN.md  DOC_CODIFIABILITY.md  README.md  etf_health_cli.py  pyproject.toml  requirements.txt
data/: EQQQ ETF Stock Price History.csv  ISF ETF Stock Price History.csv  SGLN ETF Stock Price History.csv
docs/: DOC_CODIFIABILITY.md  DOC_TOOLING_NOTES.md  README.md  atr_logic.md  summary_logic.md
examples/: SGLN ETF Stock Price History.csv  Weekly_SGLN_ETF.xlsx  etf_health_input.json
specs/: etf_buy_avg_realised_profit_v1.md  etf_dividend_strategy_v1.md  etf_exit_strategy_v1.md  etf_getout_highvol_v2.md  etf_health_1_to_5_v1.md  etf_lean_ladder_move_v1.md  etf_limit_buy_orders_v1.md  etf_limit_sell_orders_v1.md  etf_order_levels_v1.md  etf_performance_comparison_v3.md  etf_performance_metrics_v1.md  etf_rotation_exit_rules_v1.md  etf_rotation_v1.md  etf_tracker_v1.md  etf_weekly_pack_v2.md  mwrr_cheatsheet_v2.md
src/: atr.py  ema_macd.py  ema_macd_excel.py  etf_health.py  weekly_price_change_summary.py  weekly_summary_excel.py
src/etf_health/: cli.py
tests/: test_etf_health.py
