[project]
name = "deterministic-weekly-trading"
version = "0.1.0"
description = "Deterministic trading rules derived from specs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest",
]

[project.scripts]
etf-health = "etf_health.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
